--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <body>
     <div class='buttonContainer'>
       <button id='browseImage'>Browse image</button>
-      <span>image size: 200 x 200</span>
+      <button id='clearImage'>Clear image</button>
+      <span id='imageSize'></span>
       <span id='pixelPos'></span>
     </div>
     <div id='imageContainer'></div>
